k8s/base/imagen-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: imagen-service
  namespace: microservicios-web-imagenes
  labels: { app: imagen-service }
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: imagen-service
  type: ClusterIP
